# tickly

./: .gitignore  CLAUDE.md  README.md  TODO.md  package.json  tailwind.config.ts
.github/workflows/: cd.yml  ci.yml
docs/: deployment-automation.md  ios-keyboard-issues.md  roadmap.md  troubleshooting.md
src/: app.css  app.html  types.ts
src-tauri/: Cargo.toml  Info.ios.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  ios.json
src-tauri/icons/: icon.icns
src-tauri/ios-widget/: project.yml  tickly_iOS.entitlements
src-tauri/ios-widget/TicklyWidgetExtension/: CategoryWidgetConfigurationIntent.swift  Info.plist  RefreshWidgetIntent.swift  TicklyLockScreenWidget.swift  TicklyWidget.swift  TicklyWidgetBundle.swift  ToggleTodoIntent.swift  WidgetActionStore.swift  WidgetModels.swift  WidgetSnapshotLoader.swift
src-tauri/scripts/: setup-ios-widget.sh
src-tauri/src/: ios_keyboard_scroll_lock.rs  ios_native_ui.rs  lib.rs  main.rs
src-tauri/src/commands/: auth_commands.rs  category_commands.rs  graph_commands.rs  mod.rs  realtime_commands.rs  settings_commands.rs  streak_commands.rs  sync_commands.rs  tag_commands.rs  todo_commands.rs  widget_commands.rs
src-tauri/src/commands/auth_commands/: oauth_commands.rs  session_commands.rs
src-tauri/src/models/: category.rs  completion_log.rs  graph.rs  mod.rs  realtime.rs  sync.rs  tag.rs  todo_item.rs  widget.rs
src-tauri/src/repository/: auth_repo.rs  category_repo.rs  completion_log_repo.rs  database.rs  graph_repo.rs  migration.rs  mod.rs  settings_repo.rs  sync_repo.rs  tag_repo.rs  todo_repo.rs  todo_tag_repo.rs
src-tauri/src/service/: auth_service.rs  category_service.rs  mod.rs  oauth_service.rs  realtime_messages.rs  realtime_service.rs  repeat_service.rs  reset_service.rs  streak_service.rs  supabase_client.rs  sync_service.rs  tag_service.rs  todo_service.rs  widget_service.rs
src-tauri/src/service/realtime_service/: connection.rs  message.rs
src-tauri/src/service/supabase_client/: auth_ops.rs  oauth_ops.rs  sync_ops.rs
src-tauri/src/service/supabase_client/sync_ops/: data_ops.rs  tag_ops.rs
src-tauri/src/service/supabase_client/sync_ops/data_ops/: completion_ops.rs  todo_category_ops.rs
src-tauri/src/service/sync_service/: apply.rs  collect.rs  push.rs
src-tauri/src/service/widget_service/: cache.rs  snapshot.rs  theme.rs
src/components/: ActiveTagFilterBanner.svelte  AddItemInput.svelte  AddItemModal.svelte  BottomNav.svelte  CategoryMenuModal.svelte  CategoryTabs.svelte  ColorPicker.svelte  ConfirmModal.svelte  DragDropCategoryList.svelte  DragDropList.svelte  EditItemModal.svelte  FloatingActions.svelte  FontPreview.svelte  GraphCanvas.svelte  HomeModals.svelte  HomeTodoList.svelte  MemoDrawer.svelte  (+21 more)
(+62 files in other folders)
