[package]
name = "tickly"
version = "0.8.0"
description = "Simple checklist app for items to remember when going out"
authors = ["u-keunsong"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tickly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["sync", "net", "io-util", "rt", "time", "macros"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
log = "0.4"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
url = "2"
tauri-plugin-os = "2.3.2"
tauri-plugin-deep-link = "2.4.6"
tauri-plugin-notification = "2"

[target.'cfg(target_os = "ios")'.dependencies]
tauri-plugin-sign-in-with-apple = "1.0"
objc2 = "0.6.3"
block2 = "0.6.2"
objc2-foundation = "0.3.2"
objc2-ui-kit = "0.3.2"
objc2-core-graphics = "0.3.2"
objc2-core-foundation = "0.3.2"
